# PyPI-Dependency-Graph

./: .dockerignore  .gitignore  Readme.md  TODO.md  app.Dockerfile  build-images.sh  db.Dockerfile  debezium.Dockerfile  docker-compose.swarm.yml  docker-compose.yml  pyproject.toml  run-swarm.sh  swarm.linode.docker-compose.yml  swarm.rpi-cluster.docker-compose.yml  swarm.rpi-cluster.local-db.docker-compose.yml  swarm.rpi-cluster.remote-db.docker-compose.yml
analysis/: add-version-distributions-table-migration.sql  general-statistics.sql  index-issue-duplicates-cleanup.sql  non-conforming-package-versions.sql  notebook.ipynb  postgres-analysis-script.sql  script-worksheet.sql  self-referential-package-dependencies.sql  system-info.sql  version-distribution-lag.sql
bruno/pypi api/: bruno.json  google-re2.bru
data/: refresh.sh
debezium/: debezium.rpi-cluster-local-db.properties
notes/: Database Size.md  Non-Conforming Package Versions.md  Package Cycles.md  Package Distribution Types.md  Platform Selection.md  Requirements Specifications.md
pipdepgraph/: constants.py  main.py  models.py  pypi_api.py
pipdepgraph/entrypoints/: common.py  load_from_pypi_simple_index.py  load_top_8000_package_names.py  process_known_package_names_rmq.py  process_records_from_database.py  (+3 more)
scripts/: check app spread.sh  cluster setup.sh  control node crontab.sh  db node crontab.sh  full table update.sh
sql/: 001-schema-pypi-packages.sql  002-canonicalize-triggers.sql  003-seed-data.sql  005-version-comparison-functions.sql  006-search-path-shenanigans.sql  007-cdc.sql
(+57 files in other folders)
