[project]
name = "pipdepgraph"
version = "0.1.0"
description = ""
authors = [
    { name = "Austin Schaffer", email = "schaffer.austin.t@gmail.com" }
]
dependencies = [
    "aiohttp>=3.10.10",
    "psycopg[binary,pool]>=3.2.3",
    "packaging>=24.1",
    "pika>=1.3.2",
]
readme = "Readme.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
analysis = [
    "pandas>=2.2.3",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pipdepgraph"]
